--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -29,7 +29,7 @@
       <div class="panel panel-default edge-panel">
        <div class="panel-heading">
         <h4 class="panel-title">
-         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Full Control</a>
+         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><i class="fa fa-sliders fa-lg"></i> Full Control</a>
       </h4>
       <h5>Slow motion, fast forward and rewind each play</h5>
 
@@ -44,7 +44,7 @@
 <div class="panel panel-default edge-panel">
  <div class="panel-heading">
   <h4 class="panel-title">
-   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Visual</a>
+   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><i class="fa fa-eye fa-lg"></i> Visual</a>
 </h4>
 <h5>Color coded drives by ODK. Draw on video to quickly show players
    needed adjustments</h5>
@@ -58,7 +58,7 @@
 <div class="panel panel-default edge-panel">
   <div class="panel-heading">
    <h4 class="panel-title">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Play Tagging</a>
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-tags fa-lg"></i> Play Tagging</a>
  </h4>
  <h5>Tag ODK, down &amp; distance, hash,
     YL, play type, net yards and more</h5>
@@ -72,7 +72,7 @@
 <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Smart Features</a>
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour"><i class="fa fa-cubes fa-lg"></i> Smart Features</a>
   </h4>
   <h5>Quickly sort clips by tagged
      information. Save clips to device to show in locker room at half.</h5>
@@ -86,21 +86,21 @@
 <div class="panel panel-default edge-panel">
  <div class="panel-heading">
   <h4 class="panel-title">
-   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Time Saver</a>
+   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><i class="fa fa-clock-o fa-lg"></i> Time Saver</a>
 </h4>
 <h5>Upload video clips and tagged
    plays directly into hudl.</h5>
 </div>
 <div id="collapseFive" class="panel-collapse collapse">
    <div class="panel-body">
-    <p>All the video clips that are recorded during a game are saved to your laptop and can be easily accessed from the EDGE software and put into Hudl Mercury. You can easily tag each play by ODK, down & distance, hash, YL, play type, net yards, and much more. Each play is is color coordinated based on where it's an offensive, defensive, or kicking play so they're easily identifiable. Once your video is on Hudl you can then import any ODK/tagging information that you did in your EDGE App into Hudl as well.  This will save you time uploading video from your camera to your computer and also save you time coding the game's ODK info as well.</p> 
+    <p>All the video clips that are recorded during a game are saved to your laptop and can be easily accessed from the EDGE software and put into Hudl Mercury. You can easily tag each play by ODK, down &amp; distance, hash, YL, play type, net yards, and much more. Each play is is color coordinated based on where it's an offensive, defensive, or kicking play so they're easily identifiable. Once your video is on Hudl you can then import any ODK/tagging information that you did in your EDGE App into Hudl as well.  This will save you time uploading video from your camera to your computer and also save you time coding the game's ODK info as well.</p> 
  </div>
 </div>
 </div>
 <div class="panel panel-default edge-panel">
   <div class="panel-heading">
    <h4 class="panel-title">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Automation</a>
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix"><i class="fa fa-cogs fa-lg"></i> Automation</a>
  </h4>
  <h5>The EDGE software does everything
     for you. Just use the remote to record/stop each play.</h5>
@@ -132,7 +132,7 @@
     <div class="panel panel-default edge-panel">
      <div class="panel-heading">
       <h4 class="panel-title text-center">
-       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Powerful</a>
+       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven"><i class="fa fa-wifi fa-lg"></i> Powerful</a>
     </h4>
     <h5 class="text-center">View processed clips in 2-5
        seconds. 1,000 ft. wireless range. No internet required.</h5>
@@ -148,7 +148,7 @@
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Simple</a>
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight"><i class="fa fa-check-square-o fa-lg"></i> Simple</a>
   </h4>
   <h5 class="text-center">Easy and quick setup with everything you need included.</h5>
 </div>
@@ -163,7 +163,7 @@
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Reliable</a>
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine"><i class="fa fa-chain fa-lg"></i> Reliable</a>
   </h4>
   <h5 class="text-center">Works every time in small and large stadiums.</h5>
 </div>
@@ -178,7 +178,7 @@
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Portable</a>
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen"><i class="fa fa-suitcase fa-lg"></i> Portable</a>
   </h4>
   <h5 class="text-center">Everything packs up in a waterproof hard case.</h5>
 </div>
@@ -187,6 +187,74 @@
   <p>Every component of the EDGE Replay system packs up into a waterproof Pelican hard case with a custom foam insert to protect every part of the system while you travel.  The hard case is 21" x 17" x 9" and weighs 18 lbs.</p> 
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<div class="row">
+  <div class="container-fluid edge-container">
+   <div class="col-md-12 edge-title">
+    <h1>How It Works</h1>
+ </div>
+</div>
+<div class="container-fluid">
+   <div class="row first-row">
+      <div class="col-md-6">
+ <iframe src="https://www.youtube.com/embed/Sw2PuQu1xK0" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+</div>
+  <div class="col-md-6">
+
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default edge-panel">
+       <div class="panel-heading">
+        <h4 class="panel-title">
+         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"><i class="fa fa-video-camera fa-lg"></i> Connect existing HD cameras to system.</a>
+      </h4>
+   </div>
+   <div id="collapseEleven" class="panel-collapse collapse">
+     <div class="panel-body">
+      <p>The EDGE system will connect to your existing HD camcorders with an HDMI cable that is provided with the system.  You can connect to your end zone camera or your press box camera with our 1 View system or to both with our 2 View system. All you need is a high definition camcorder with an HDMI out port.</p> 
+   </div>
+</div>
+</div>
+<!-- /.panel -->
+<div class="panel panel-default edge-panel">
+ <div class="panel-heading">
+  <h4 class="panel-title">
+   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"><i class="fa fa-laptop fa-lg"></i> Record plays with EDGE software.</a>
+</h4>
+</div>
+<div id="collapseTwelve" class="panel-collapse collapse">
+   <div class="panel-body">
+    <p>Your HD camcorder will be connected to your laptop with the EDGE capture device.  The capture device will record each play onto the laptop where the EDGE Software will organize and store each video clip and get it ready to send out to the connected iPads in the booth or sideline.</p> 
+    <p>The EDGE Software runs on Windows laptops and we recommend latops that have an i5 processor with at least 8GB of RAM. </p> 
+ </div>
+</div>
+</div>
+<div class="panel panel-default edge-panel">
+  <div class="panel-heading">
+   <h3 class="panel-title">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"><i class="fa fa-tablet fa-lg"></i> View plays on iPad in 2-3 seconds.</a>
+ </h3>
+ </div>
+ <div id="collapseThirteen" class="panel-collapse collapse">
+    <div class="panel-body">
+     <p>After a play is recorded by the capture device and is in the EDGE Software on your laptop, the play then broadcasts to connected iPads in a few seconds. Once the play is available, it will show up in the EDGE iPad App and you will be able to play that clip over and over as long as the system is running.</p> 
+  </div>
+</div>
+</div>
+<div class="panel panel-default edge-panel">
+   <div class="panel-heading">
+    <h4 class="panel-title">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"><i class="fa fa-upload fa-lg"></i> Upload video and ODK directly into Hudl.</a>
+  </h4>
+  </div>
+  <div id="collapseFourteen" class="panel-collapse collapse">
+     <div class="panel-body">
+      <p>After your game is done and you turn off the EDGE system, you will be able to access all the recorded clips on your laptop.  This feature will allow you to grab all the video files from the laptop and upload them into Hudl Mercury for film review.  You will also be able to upload any ODK information that you tagged during the game in Hudl as well.</p> 
+   </div>
 </div>
 </div>
 </div>
