push-up wireless.

--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -207,11 +207,12 @@
   <div class="col-md-6">
 
     <div class="panel-group" id="accordion">
-      <div class="panel panel-default edge-panel">
+      <div class="panel panel-default edge-panel roomy">
        <div class="panel-heading">
-        <h4 class="panel-title">
-         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"><i class="fa fa-video-camera fa-lg"></i> Connect existing HD cameras to system.</a>
+        <h4 class="panel-title text-center">
+         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"><i class="fa fa-video-camera fa-lg"></i> Connect</a>
       </h4>
+      <h5 class="text-center">existing HD cameras to system.</h5>
    </div>
    <div id="collapseEleven" class="panel-collapse collapse">
      <div class="panel-body">
@@ -220,11 +221,12 @@
 </div>
 </div>
 <!-- /.panel -->
-<div class="panel panel-default edge-panel">
+<div class="panel panel-default edge-panel roomy">
  <div class="panel-heading">
-  <h4 class="panel-title">
-   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"><i class="fa fa-laptop fa-lg"></i> Record plays with EDGE software.</a>
+  <h4 class="panel-title text-center">
+   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"><i class="fa fa-laptop fa-lg"></i> Record</a>
 </h4>
+<h5 class="text-center">plays with EDGE software.</h5>
 </div>
 <div id="collapseTwelve" class="panel-collapse collapse">
    <div class="panel-body">
@@ -233,11 +235,12 @@
  </div>
 </div>
 </div>
-<div class="panel panel-default edge-panel">
+<div class="panel panel-default edge-panel roomy">
   <div class="panel-heading">
-   <h3 class="panel-title">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"><i class="fa fa-tablet fa-lg"></i> View plays on iPad in 2-3 seconds.</a>
- </h3>
+   <h4 class="panel-title text-center">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"><i class="fa fa-tablet fa-lg"></i> View</a>
+ </h4>
+ <h5 class="text-center">plays on iPad in 2-3 seconds.</h5>
  </div>
  <div id="collapseThirteen" class="panel-collapse collapse">
     <div class="panel-body">
@@ -245,11 +248,12 @@
   </div>
 </div>
 </div>
-<div class="panel panel-default edge-panel">
+<div class="panel panel-default edge-panel roomy">
    <div class="panel-heading">
-    <h4 class="panel-title">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"><i class="fa fa-upload fa-lg"></i> Upload video and ODK directly into Hudl.</a>
+    <h4 class="panel-title text-center">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"><i class="fa fa-upload fa-lg"></i> Upload</a>
   </h4>
+  <h5 class="text-center">video and ODK directly into Hudl.</h5>
   </div>
   <div id="collapseFourteen" class="panel-collapse collapse">
      <div class="panel-body">
