--- a/products.html
+++ b/products.html
@@ -211,7 +211,7 @@
         
     <div class="container-fluid">
 
-        <div class="row">
+        <div class="row first-row">
 
             <div class="col-md-4 col-sm-6">
                 <div class="panel panel-default text-center">
