--- a/development/sports.html
+++ b/development/sports.html
@@ -22,14 +22,9 @@
       </div>
     </div>
     <div class="row">
-
-
       <div class="col-md-6">
-        <iframe src="https://www.youtube.com/embed/wf6L0TPwu-k" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+        <iframe src="https://player.vimeo.com/video/159230478" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-
-
-
       <div class="col-md-6">
         <p>Football is an action-packed, fast-paced sport that requires a great understanding between the coaches and their players. With the Sport Scope's 30ft elevated view all coaches and players can watch their game and practice film from a new perspective to understand what there are doing correctly and what they need to improve upon. Most high school and some college football stadiums do not have an aerial vantage point for filming behind the endzone. The end zone view is arguably more valuable than the sideline view, but coupled together the two views show coaches and players every angle the need to stay ahead of their competition.</p>
 
@@ -62,7 +57,7 @@
 <p>With the Sport Scope, you can set up at half field or behind the goal depending on what kind of views you are looking for. Set up on sideline for a more broadcast look and behind the goal for a more overall view of the play, each view has its advantages and the Sport Scope can accommodate both.</p>
       </div>
       <div class="col-md-6">
-        <iframe src="https://www.youtube.com/embed/Ko2_-DFSc2w" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+        <iframe src="https://player.vimeo.com/video/159225558" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
   </div>
@@ -81,7 +76,7 @@
 
 
       <div class="col-md-6">
-        <iframe src="https://www.youtube.com/embed/YhDmjX7BtKs" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+        <iframe src="https://player.vimeo.com/video/158363765" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
 
