--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -1,20 +1,88 @@
-@@include('./header.html');
-<div class="container-fluid first-row row dark-edge-container">
- <!-- Service Panels -->
- <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-      <div class="col-md-3 edge-ad">
-        <img src="./img/edge.svg" alt="Edge Replay">
-        <h4>Realtime replay in seconds.</h4>
-      </div> 
-      <div class="col-md-1"></div>
+@@include('./header-edge.html');
+<div class="container-fluid first-row row photo-bg-edge" style="background-image: url('./img/edge/IMG_0940.jpg');">
+    
       <div class="col-md-4">
-        <h3 class=" light-text">EDGE is an instant replay system that allows coaches and athletes to review all recorded plays from your press box and end zone camera systems on their iPads (Generation 2 or newer).</h3>
+        <h3 class="light-text">EDGE is an instant replay system that allows coaches and athletes to review all recorded plays from your press box and end zone camera systems on their iPads (Generation 2 or newer).</h3>
       </div>
       <div class="col-md-4">
         <p class="bottom light-text">Coaches and players on the sideline, in the press box, or in the stands can view each recorded play in under 5 seconds after it's filmed with up to 10 iPads viewing at a time. The ability to coach and evaluate opponents in real time instantly creates a competitive advantage against any opponent.</p>
       </div>
    </div>
 </div>
+
+<div class="row">
+  <div class="container-fluid edge-container">
+   <div class="col-md-12 edge-title">
+    <h1>How It Works</h1>
+ </div>
+</div>
+<div class="container-fluid">
+   <div class="row first-row">
+      <div class="col-md-6">
+ <iframe src="https://www.youtube.com/embed/Sw2PuQu1xK0" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+</div>
+  <div class="col-md-6">
+
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default edge-panel roomy">
+       <div class="panel-heading">
+        <h4 class="panel-title text-center">
+         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"><i class="fa fa-video-camera fa-lg"></i> Connect</a>
+      </h4>
+      <h5 class="text-center">existing HD cameras to system.</h5>
+   </div>
+   <div id="collapseEleven" class="panel-collapse collapse">
+     <div class="panel-body">
+      <p>The EDGE system will connect to your existing HD camcorders with an HDMI cable that is provided with the system.  You can connect to your end zone camera or your press box camera with our 1 View system or to both with our 2 View system. All you need is a high definition camcorder with an HDMI out port.</p> 
+   </div>
+</div>
+</div>
+<!-- /.panel -->
+<div class="panel panel-default edge-panel roomy">
+ <div class="panel-heading">
+  <h4 class="panel-title text-center">
+   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"><i class="fa fa-laptop fa-lg"></i> Record</a>
+</h4>
+<h5 class="text-center">plays with EDGE software.</h5>
+</div>
+<div id="collapseTwelve" class="panel-collapse collapse">
+   <div class="panel-body">
+    <p>Your HD camcorder will be connected to your laptop with the EDGE capture device.  The capture device will record each play onto the laptop where the EDGE Software will organize and store each video clip and get it ready to send out to the connected iPads in the booth or sideline.</p> 
+    <p>The EDGE Software runs on Windows laptops and we recommend latops that have an i5 processor with at least 8GB of RAM. </p> 
+ </div>
+</div>
+</div>
+<div class="panel panel-default edge-panel roomy">
+  <div class="panel-heading">
+   <h4 class="panel-title text-center">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"><i class="fa fa-tablet fa-lg"></i> View</a>
+ </h4>
+ <h5 class="text-center">plays on iPad in 2-3 seconds.</h5>
+ </div>
+ <div id="collapseThirteen" class="panel-collapse collapse">
+    <div class="panel-body">
+     <p>After a play is recorded by the capture device and is in the EDGE Software on your laptop, the play then broadcasts to connected iPads in a few seconds. Once the play is available, it will show up in the EDGE iPad App and you will be able to play that clip over and over as long as the system is running.</p> 
+  </div>
+</div>
+</div>
+<div class="panel panel-default edge-panel roomy">
+   <div class="panel-heading">
+    <h4 class="panel-title text-center">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"><i class="fa fa-upload fa-lg"></i> Upload</a>
+  </h4>
+  <h5 class="text-center">video and ODK directly into Hudl.</h5>
+  </div>
+  <div id="collapseFourteen" class="panel-collapse collapse">
+     <div class="panel-body">
+      <p>After your game is done and you turn off the EDGE system, you will be able to access all the recorded clips on your laptop.  This feature will allow you to grab all the video files from the laptop and upload them into Hudl Mercury for film review.  You will also be able to upload any ODK information that you tagged during the game in Hudl as well.</p> 
+   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
 <div class="row">
  <div class="container-fluid edge-container">
    <div class="col-md-12 edge-title">
@@ -193,77 +261,7 @@
 </div>
 </div>
 
-<div class="row">
-  <div class="container-fluid edge-container">
-   <div class="col-md-12 edge-title">
-    <h1>How It Works</h1>
- </div>
-</div>
-<div class="container-fluid">
-   <div class="row first-row">
-      <div class="col-md-6">
- <iframe src="https://www.youtube.com/embed/Sw2PuQu1xK0" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
-</div>
-  <div class="col-md-6">
 
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default edge-panel roomy">
-       <div class="panel-heading">
-        <h4 class="panel-title text-center">
-         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"><i class="fa fa-video-camera fa-lg"></i> Connect</a>
-      </h4>
-      <h5 class="text-center">existing HD cameras to system.</h5>
-   </div>
-   <div id="collapseEleven" class="panel-collapse collapse">
-     <div class="panel-body">
-      <p>The EDGE system will connect to your existing HD camcorders with an HDMI cable that is provided with the system.  You can connect to your end zone camera or your press box camera with our 1 View system or to both with our 2 View system. All you need is a high definition camcorder with an HDMI out port.</p> 
-   </div>
-</div>
-</div>
-<!-- /.panel -->
-<div class="panel panel-default edge-panel roomy">
- <div class="panel-heading">
-  <h4 class="panel-title text-center">
-   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"><i class="fa fa-laptop fa-lg"></i> Record</a>
-</h4>
-<h5 class="text-center">plays with EDGE software.</h5>
-</div>
-<div id="collapseTwelve" class="panel-collapse collapse">
-   <div class="panel-body">
-    <p>Your HD camcorder will be connected to your laptop with the EDGE capture device.  The capture device will record each play onto the laptop where the EDGE Software will organize and store each video clip and get it ready to send out to the connected iPads in the booth or sideline.</p> 
-    <p>The EDGE Software runs on Windows laptops and we recommend latops that have an i5 processor with at least 8GB of RAM. </p> 
- </div>
-</div>
-</div>
-<div class="panel panel-default edge-panel roomy">
-  <div class="panel-heading">
-   <h4 class="panel-title text-center">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"><i class="fa fa-tablet fa-lg"></i> View</a>
- </h4>
- <h5 class="text-center">plays on iPad in 2-3 seconds.</h5>
- </div>
- <div id="collapseThirteen" class="panel-collapse collapse">
-    <div class="panel-body">
-     <p>After a play is recorded by the capture device and is in the EDGE Software on your laptop, the play then broadcasts to connected iPads in a few seconds. Once the play is available, it will show up in the EDGE iPad App and you will be able to play that clip over and over as long as the system is running.</p> 
-  </div>
-</div>
-</div>
-<div class="panel panel-default edge-panel roomy">
-   <div class="panel-heading">
-    <h4 class="panel-title text-center">
-     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"><i class="fa fa-upload fa-lg"></i> Upload</a>
-  </h4>
-  <h5 class="text-center">video and ODK directly into Hudl.</h5>
-  </div>
-  <div id="collapseFourteen" class="panel-collapse collapse">
-     <div class="panel-body">
-      <p>After your game is done and you turn off the EDGE system, you will be able to access all the recorded clips on your laptop.  This feature will allow you to grab all the video files from the laptop and upload them into Hudl Mercury for film review.  You will also be able to upload any ODK information that you tagged during the game in Hudl as well.</p> 
-   </div>
-</div>
-</div>
-</div>
-</div>
-</div>
 
 <div class="row">
   <div class="container-fluid edge-container">
@@ -271,10 +269,10 @@
     <h1>Pricing &amp; Packages</h1>
  </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid photo-bg" style="background-image: url('./img/edge/IMG_0940.jpg');">
    <div class="first-row">
-    <div class="col-md-2"></div>
-    <div class="col-md-3">
+    <div class="col-md-1"></div>
+    <div class="col-md-4">
      <div class="panel panel-default text-center">
       <div class="panel-heading">
        <h3 class="panel-title">One View</h3>
@@ -306,7 +304,7 @@
  </div>
 </div>
 <div class="col-md-2"></div>
-<div class="col-md-3">
+<div class="col-md-4">
   <div class="panel panel-default text-center">
    <div class="panel-heading">
     <h3 class="panel-title">Two View</h3>
@@ -341,7 +339,7 @@
 
 
 </div>
-</div>
+
 
 <div class="container-fluid edge-container">
    <div class="col-md-12 edge-title">
