--- a/development/header.html
+++ b/development/header.html
@@ -54,9 +54,9 @@
           <div class="row social">
             <div class="col-md-12">
               <ul>
-                <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
+                <!-- <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
                 <li><a href="http://blog.sportscopevideo.com/" target="blank" class="fa fa-tumblr" alt="tumblr"></a></li>
-                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li>
+                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li> -->
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
                 <li><a href="" target="blank" class="fa fa-youtube-play" alt="youtube"></a></li>
