--- a/development/index.html
+++ b/development/index.html
@@ -8,7 +8,7 @@
   <!-- Marketing Icons Section -->
   <div class="row">
     <div class="col-md-9">
-      <h1 class="picture-text">Rise above the competition.</h1>
+      <h1 class="picture-text">Rise above the competition</h1>
     </div>
     <a href="./edge-software.html">
       <div class="col-md-3 edge-ad">
