--- a/development/quick-scope-11.html
+++ b/development/quick-scope-11.html
@@ -26,7 +26,7 @@
     <div class="row">
 
       <div class="col-md-6">
-        <iframe src="https://www.youtube.com/embed/lYa0RPXAi4Q" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+        <iframe src="https://player.vimeo.com/video/158362960" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-md-6">
@@ -257,7 +257,7 @@
     </div>
     <div class="row">
       <div class="col-sm-6 col-xs-12 col-md-4">  
-        <iframe src="https://www.youtube.com/embed/pQb71G-mB_g" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/158362537" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <div class="col-sm-6 col-xs-12 col-md-4">
         
