--- a/development/quick-scope-16.html
+++ b/development/quick-scope-16.html
@@ -26,7 +26,7 @@
     <div class="row">
 
       <div class="col-md-6">
-        <iframe src="https://www.youtube.com/embed/lYa0RPXAi4Q" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+        <iframe src="https://player.vimeo.com/video/158362960" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-md-6">
@@ -257,7 +257,8 @@
     </div>
     <div class="row">
       <div class="col-sm-6 col-xs-12 col-md-4">  
-        <iframe src="https://www.youtube.com/embed/EUiIJJp2tNk" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/158362200" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/158362200"></p>
       </div>
       <div class="col-sm-6 col-xs-12 col-md-4">
         
