--- a/development/edge-support.html
+++ b/development/edge-support.html
@@ -1,22 +1,9 @@
-@@include('./header.html');
-<div class="container-fluid first-row row dark-edge-container">
+@@include('./header-edge.html');
+<div class="container-fluid first-row row edge-container">
  <!-- Service Panels -->
  <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-      <div class="col-md-3 edge-ad">
-        <img src="./img/edge.svg" alt="Edge Replay">
-        <h4>Realtime replay in seconds.</h4>
-      </div> 
-      <div class="col-md-1"></div>
-      <div class="col-md-4">
-        <h3 class=" light-text">EDGE is an instant replay system that allows coaches and athletes to review all recorded plays from your press box and end zone camera systems on their iPads (Generation 2 or newer).</h3>
-      </div>
-      <div class="col-md-4">
-        <p class="bottom light-text">Coaches and players on the sideline, in the press box, or in the stands can view each recorded play in under 5 seconds after it's filmed with up to 10 iPads viewing at a time. The ability to coach and evaluate opponents in real time instantly creates a competitive advantage against any opponent.</p>
-      </div>
-   </div>
-</div>
-<div class="row">
- <div class="container-fluid edge-container">
+      
+     
    <div class="col-md-12 edge-title">
      <h1>Software Downloads</h1>
   </div>
