--- a/development/header-edge.html
+++ b/development/header-edge.html
@@ -93,15 +93,27 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">EDGE Replay <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Instant Replay <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="edge-software.html">Software</a>
+                <a href="edge-software.html">EDGE Replay</a>
               </li>
               <li>
                 <a href="edge-support.html">Support</a>
               </li>
             </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Compare<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="comparison.html">Endzone Cameras</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="testimonials.html">Testimonials</a>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
@@ -109,28 +121,14 @@
               <li>
                 <a href="about.html">History</a>
               </li>
-              
+              <li>
+                <a href="faq.html">FAQ</a>
+              </li>
               <li>
                 <a href="blog-post.html">Blog</a>
               </li>
+              <li><a href="sports.html">Sports</a></li>
             </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="sports.html">Sports</a>
-              </li>
-              <li>
-                <a href="testimonials.html">Testimonials</a>
-              </li>
-              <li>
-                <a href="comparison.html">Comparison</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="faq.html">FAQ</a>
           </li>
           <li>
             <a href="contact.html">Contact</a>
