--- a/development/quick-scope-16.html
+++ b/development/quick-scope-16.html
@@ -93,6 +93,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/memory.jpg" alt="">
                 <p>The Sport Scope comes standard with a High Definition Sony camcorder and a 32GB memory card. We always make sure that we use the best camcorders that have the most important features our customers are looking for, which is why we only use Sony camcorders. Sony has the most dependable and advanced consumer camcorders available, which allow our customers to get HD quality film, transfer it quickly to their computers, and upload to their favorite editing software.</p> 
               </div>
             </div>
@@ -106,6 +107,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/batteries.jpg" alt="">
                 <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
 
                 <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
@@ -121,6 +123,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/remote.png" alt="">
                 <p>The Sony camera remote allows the user to zoom in and out as they record with their endzone camera. You can also turn on/off the camcorder with this remote, which means you can conserve battery during halftime, between quarters, etc. The user can also put the camcorder in record or standby mode, allowing for the operator to only record the plays they want. This allows for smaller, more precise clips of only the action in the plays, which cuts down on transfer and analysis time.</p> 
               </div>
             </div>
@@ -147,6 +150,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/monitor.jpg" alt="">
                 <p>The Quick Scope comes standard with a 9" High Resolution LCD monitor for the clearest viewing possible. The monitor connects to the camera with a 9' cable and fits onto an adjustable mount which allows the operator to change the height of the monitor.</p> 
               </div>
             </div>
@@ -165,6 +169,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/hardcase.jpg" alt="">
                 <p>The hard case protects and organizes all the important electronics that make up our complete end zone camera package. The hard case is an important part of our system because it ensures that the most vulnerable parts of the endzone camera are always safe and accounted for.</p> 
               </div>
             </div>
@@ -178,6 +183,7 @@
             </div>
             <div id="collapseSeven" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/raincover-screen.jpg" alt="">
                 <p>A waterproof plastic cover for the monitor, monitor battery, and Sony camera remote. This cover easily slips right over the monitor to protect your electronics during wet conditions.</p>
               </div>
             </div>
@@ -191,6 +197,7 @@
             </div>
             <div id="collapseEight" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/raincover.jpg" alt="">
                 <p>A lens cover provides protection from any adverse weather, and a waterproof cover protects the camera, the camera swivel mount, and the cable connects.</p>              
               </div>
             </div>
@@ -218,6 +225,7 @@
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/reader.jpg" alt="">
                 <p>Each Sport Scope comes standard with a memory card reader that allows for quick and easy transferring of video from the memory card to a computer. We know that some computers do not have memory cards slots, so we supply one as part of our complete endzone camera package.</p> 
               </div>
             </div>
@@ -235,6 +243,7 @@
             </div>
             <div id="collapseEleven" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/cable.jpg" alt="">
                 <p>The Quick Scope has one cable with two connections at the top and two at the bottom making setup very simple. The top connections consist of a cable for the video feed and a LANC cable for camera controls. The cable is 12' long and is covered with an abrasion resistant sleeve to improve the longevity of the cable.</p> 
               </div>
             </div>
