--- a/development/sport-scope-25.html
+++ b/development/sport-scope-25.html
@@ -92,6 +92,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/memory.jpg" alt="">
                 <p>The Sport Scope comes standard with a High Definition Sony camcorder and a 32GB memory card. We always make sure that we use the best camcorders that have the most important features our customers are looking for, which is why we only use Sony camcorders. Sony has the most dependable and advanced consumer camcorders available, which allow our customers to get HD quality film, transfer it quickly to their computers, and upload to their favorite editing software.</p> 
               </div>
             </div>
@@ -105,6 +106,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/batteries.jpg" alt="">
                 <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
 
                 <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
@@ -120,6 +122,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/remote.png" alt="">
                 <p>The Sony camera remote allows the user to zoom in and out as they record with their endzone camera. You can also turn on/off the camcorder with this remote, which means you can conserve battery during halftime, between quarters, etc. The user can also put the camcorder in record or standby mode, allowing for the operator to only record the plays they want. This allows for smaller, more precise clips of only the action in the plays, which cuts down on transfer and analysis time.</p> 
               </div>
             </div>
@@ -147,6 +150,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/monitor.jpg" alt="">
                 <p>The Sport Scope comes standard with a 9" LCD monitor for clear viewing. The monitor attaches to the monitor plate and can be sat comfortably in the operator's lap while they sit down and film with their endzone camera.</p> 
               </div>
             </div>
@@ -164,6 +168,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/hardcover.jpg" alt="">
                 <p>The hard case protects and organizes all the important electronics that make up our complete end zone camera package. The hard case is an important part of our system because it ensures that the most vulnerable parts of the endzone camera are always safe and accounted for.</p> 
               </div>
             </div>
@@ -203,6 +208,7 @@
             </div>
             <div id="collapseNine" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/level.jpg" alt="">
                 <p>Each Sport Scope comes standard with a magnetic level that allows for the user to perfectly level their end zone camera before the poles are raised. Leveling the end zone camera ensures that the poles will be structurally sound and that the film itself with be level too.</p> 
 
               </div>
@@ -217,6 +223,7 @@
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/reader.jpg" alt="">
                 <p>Each Sport Scope comes standard with a memory card reader that allows for quick and easy transferring of video from the memory card to a computer. We know that some computers do not have memory cards slots, so we supply one as part of our complete endzone camera package.</p> 
               </div>
             </div>
@@ -248,6 +255,7 @@
             </div>
             <div id="collapseTwelve" class="panel-collapse collapse">
               <div class="panel-body">
+              <img src="./img/accessory/cable.jpg" alt="">
                 <p>Each Sport Scope comes with a custom cable. Our single cable end zone camera system allows for a quick and easy set up. The cable is also protected with an abrasion resistant cover to protect the life of the cable.</p> 
               </div>
             </div>
